Fix OWB sell in person vertical alignment

--- a/assets/css/wc-setup.scss
+++ b/assets/css/wc-setup.scss
@@ -1117,7 +1117,7 @@ h3.jetpack-reasons {
 	font-weight: 500;
 	margin-bottom: 0.5em;
 	margin-top: 0.85em;
-	display: block;
+	display: inline-block;
 }
 
 .location-input {
@@ -1167,13 +1167,15 @@ h3.jetpack-reasons {
 	}
 }
 
-.product-type-container {
+.product-type-container,
+.sell-in-person-container {
 	margin-top: 14px;
 	margin-bottom: 1px;
 }
 
 #woocommerce_sell_in_person {
 	margin-left: 0;
+	margin-top: calc(0.85em / 2);
 }
 
 .wc-wizard-service-settings {
